Add some things

--- a/funoon_fiesta/src/index.css
+++ b/funoon_fiesta/src/index.css
@@ -2,8 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+
+html.lenis,
+html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
+
+/* body {
   cursor: none;
+} */
+
+*{
+  scroll-behavior: smooth !important;
 }
 
 body.light {
@@ -47,6 +74,9 @@ body.dark {
 .scale-100 {
   transform: scale(0.8);
 }
+
+
+
 
 
 
